@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Fixed a critical bug with celery not being used even when `use_celery`
+    was true.
   * Improved the validation of NRML files
   * Added a command `oq-engine --show-log <job_id>`
 
